--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,7 @@
 		    <!-- JAXB Runtime Dependency -->
 		    <dependency>
 		        <groupId>org.glassfish.jaxb</groupId>
-		        <artifactId>jaxb-runtime</artifactId>
-		        <version>2.3.1</version>
+		        <artifactId>jaxb-runtime</artifactId>        
 		    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -106,6 +105,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
