--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 spring.application.name=School_Project
 server.port=9090
-# MySQL Database Configuration
+
+# PostgreSQL Database Configuration
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate Configuration (Optional)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+frontend.url=${FRONTEND_URL}
 # Mail server settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=i4izharali9838@gmail.com
 spring.mail.password=cbsf cpsz uhss cjmx
 spring.mail.protocol=smtp
-
-# Additional properties for Gmail
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
