--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 spring.application.name=School_Project
 server.port=9090
 
-# PostgreSQL Database Configuration
+# PostgresSQL Database Configuration
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+#upi details
+upi.admin.vpa=${UPI_ID}
+upi.admin.name=${UPI_NAME}
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=${JWT_SECRET}
 
 frontend.url=${FRONTEND_URL}
 # Mail server settings
